--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="screen-columns">
-            <div class="screen-title">
+            <div class="screen-main">
                 <h2>EARL GREY</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
                 <span class="screen-order">ORDER NOW</span>
@@ -59,10 +59,15 @@
             </ul>
         </div>
         <div class="screen-columns" >
-            <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-caption"/>
-            <div class="">
-                <h2>캐모마일</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
+            <div class="screen-container">
+                <div class="screen-title">
+                    <h2>캐모마일</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
+                    <span class="screen-order">ORDER NOW</span>
+                
+                </div>
+                <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-big-caption"/>
+
             </div>
         </div>
         <div class="screen-columns">
@@ -73,40 +78,98 @@
             <ul class="screen-list">
                 <li class="screen-row">
                     <div class="screen-caption screen-caption__figure">
-                        <span>101 STORE</span>
+                        <span>124</span>
+                        <span>STORE</span>
                     </div>
                 </li>
                 <li class="screen-row">
                     <div class="screen-caption screen-caption__figure">
-                        <span>101 STORE</span>
+                        <span>101</span>
+                        <span>MENU</span>
                     </div>
                 </li>
                 <li class="screen-row">
                     <div class="screen-caption screen-caption__figure">
-                        <span>101 STORE</span>
+                        <span>200</span>
+                        <span>CHEF</span>
                     </div>
                 </li>
             </ul>
         </div>
         <div class="screen-columns" >
-            <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-caption"/>
-            <div class="">
-                <h2>페퍼민트</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
+            <div class="screen-container">
+                <div class="screen-title">
+                    <h2>페퍼민트</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
+                    <span class="screen-order">ORDER NOW</span>
+                </div>
+                <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-big-caption"/>
             </div>
         </div>
-        <div class="screen-columns" ></div>
         <div class="screen-columns">
-            <div class="">
-                <h2>더 많은 정보를 원하시나요?</h2>
+            <div class="screen-exp">
+                <img src="img/barister.jpg" alt="바리스타" class="screen-caption">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus a quasi repellat voluptatum cum earum similique reprehenderit! Optio eveniet totam, saepe nulla similique a reiciendis ipsam, doloribus quas, distinctio qui.</p>
+                <h2>NAME</h2>
+            </div>
+        </div>
+        <div class="screen-columns">
+            <div class="screen-alt-title">
+                <h2>MORE INFORMATION</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
             </div>
-            <form>
+            <form class="screen-form">
                 <input type="email" placeholder="Your Email">
                 <button type="submit">SUBSCRIBE</button>
             </form>
         </div>
     </main>
+    <footer class="screen-footer">
+        <div class="footer-cover">
+            <div class="footer-container">
+                <div class="footer-title">
+                    <h3>Thank You!</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat vel cupiditate unde. Eligendi dolorum veritatis aperiam, quam, doloribus voluptates suscipit nemo ex consequatur ipsam, praesentium ratione dolorem expedita nisi autem!</p>
+                    <div class="footer-icons">
+                        <span><i class="fab fa-instagram"></i></span>
+                        <span><i class="fab fa-facebook-f"></i></span>
+                        <span><i class="fab fa-twitter"></i></span>
+                        <span><i class="fas fa-phone-alt"></i></span>
+                    </div>
+                </div>
+                <div class="footer-more">
+                    <div class="footer-rows">
+                        <h3>About</h3>
+                        <ul class="footer-list">
+                            <li>History</li>
+                            <li>Our Team</li>
+                            <li>Brand Guidelines</li>
+                            <li>Terms&Condition</li>
+                            <li>Privacy Policy</li>
+                        </ul>
+                    </div>
+                    <div class="footer-rows">
+                        <h3>Service</h3>
+                        <ul class="footer-list">
+                            <li>How to Order</li>
+                            <li>Our Product</li>
+                            <li>Order Status</li>
+                            <li>Promo</li>
+                            <li>Payment Method</li>
+                        </ul>
+                    </div>
+                    <div class="footer-rows">
+                        <h3>Other</h3>
+                        <ul class="footer-list">
+                            <li>Contact us</li>
+                            <li>Help</li>
+                            <li>Privacy</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"> </script>
 </body>
 </html>
