--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li>Contact</li>
             </ul>
         </nav>
-        <div><i class="fas fa-search"></i></div>
+        <div class="nav__icon"><i class="fas fa-search"></i></div>
     </header>
     <main>
         <div class="screen-columns">
@@ -36,21 +36,27 @@
             </div>
             <ul class="screen-list">
                 <li class="screen-row">
-                    <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-caption"/>
+                    <span>
+                        <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-caption"/>
+                    </span>
                     <div class="screen-content">
                         <h3>캐모마일</h3>
                         <p>불면증, 신경통, 우울증, 스트레스 완하 등의 치료제. 긴장을 풀어주는 효능이 뛰어남</p>
                     </div>
                 </li>
                 <li class="screen-row">
-                    <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-caption"/>
+                    <span>
+                        <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-caption"/>
+                    </span>
                     <div class="screen-content">
                         <h3>페퍼민트</h3>
                         <p>흔히 박하차라고 불리며 항균 및 통증 완화에 탁월해 감기를 달고 사는 분들에게 추천.</p>
                     </div>
                 </li>
                 <li class="screen-row">
-                    <img src="img/lavender3.jpg" alt="라벤더 이미지" class="screen-caption"/>
+                    <span>
+                        <img src="img/lavender3.jpg" alt="라벤더 이미지" class="screen-caption"/>
+                    </span>
                     <div class="screen-content">
                         <h3>라벤더</h3>
                         <p>신셩을 안정시키는 효과가 아주 뛰어나 스트레스나 무기력증 및 불면증에도 탁월한 효능.</p>
