--- a/index.html
+++ b/index.html
@@ -1,181 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Milk Tea</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="img/logocolor.png" alt="">
-        </a>
-        <nav class="nav">
-            <ul class="nav__ul">
-                <li>Home</li>
-                <li>Product</li>
-                <li>Promo</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-        <div class="nav__icon"><i class="fas fa-search"></i></div>
-    </header>
-    <main>
-        <div class="screen-columns">
-            <div class="screen-main">
-                <h2>EARL GREY</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
-                <span class="screen-order">ORDER NOW</span>
-            </div>
-        </div>
-        <div class="screen-columns">
-            <div class="screen-alt-title">
-                <h2>Popular tea</h2>
-                <p>그윽하고 독특한 향으로 허브타는 기분 좋고, 그 안에에 숨겨진 효능은 더욱 굉장하다</p>
-            </div>
-            <ul class="screen-list">
-                <li class="screen-row">
-                    <span>
-                        <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-caption"/>
-                    </span>
-                    <div class="screen-content">
-                        <h3>캐모마일</h3>
-                        <p>불면증, 신경통, 우울증, 스트레스 완하 등의 치료제. 긴장을 풀어주는 효능이 뛰어남</p>
-                    </div>
-                </li>
-                <li class="screen-row">
-                    <span>
-                        <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-caption"/>
-                    </span>
-                    <div class="screen-content">
-                        <h3>페퍼민트</h3>
-                        <p>흔히 박하차라고 불리며 항균 및 통증 완화에 탁월해 감기를 달고 사는 분들에게 추천.</p>
-                    </div>
-                </li>
-                <li class="screen-row">
-                    <span>
-                        <img src="img/lavender3.jpg" alt="라벤더 이미지" class="screen-caption"/>
-                    </span>
-                    <div class="screen-content">
-                        <h3>라벤더</h3>
-                        <p>신셩을 안정시키는 효과가 아주 뛰어나 스트레스나 무기력증 및 불면증에도 탁월한 효능.</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="screen-columns" >
-            <div class="screen-container">
-                <div class="screen-title">
-                    <h2>캐모마일</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
-                    <span class="screen-order">ORDER NOW</span>
-                
-                </div>
-                <img src="img/Chamomile.jpg" alt="캐모마일 이미지" class="screen-big-caption"/>
-
-            </div>
-        </div>
-        <div class="screen-columns">
-            <div class="screen-alt-title">
-                <h2>STATISTICS</h2>
-                <p>Lorem ipsum dolorum soluta quidem esse nulla porro reiciendis doloremque ratione, officia illo nostrum distinctio unde aliquam ex quam.</p>
-            </div>
-            <ul class="screen-list">
-                <li class="screen-row">
-                    <div class="screen-caption screen-caption__figure">
-                        <span>124</span>
-                        <span>STORE</span>
-                    </div>
-                </li>
-                <li class="screen-row">
-                    <div class="screen-caption screen-caption__figure">
-                        <span>101</span>
-                        <span>MENU</span>
-                    </div>
-                </li>
-                <li class="screen-row">
-                    <div class="screen-caption screen-caption__figure">
-                        <span>200</span>
-                        <span>CHEF</span>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="screen-columns" >
-            <div class="screen-container">
-                <div class="screen-title">
-                    <h2>페퍼민트</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
-                    <span class="screen-order">ORDER NOW</span>
-                </div>
-                <img src="img/mint.jpg" alt="페퍼미트 이미지" class="screen-big-caption"/>
-            </div>
-        </div>
-        <div class="screen-columns">
-            <div class="screen-exp">
-                <img src="img/barister.jpg" alt="바리스타" class="screen-caption">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus a quasi repellat voluptatum cum earum similique reprehenderit! Optio eveniet totam, saepe nulla similique a reiciendis ipsam, doloribus quas, distinctio qui.</p>
-                <h2>NAME</h2>
-            </div>
-        </div>
-        <div class="screen-columns">
-            <div class="screen-alt-title">
-                <h2>MORE INFORMATION</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sit illum iusto! Sit tempora ducimus mollitia repellat magnam eveniet saepe veritatis quaerat sunt. Sunt nostrum numquam nulla quasi fugit dolorum.</p>
-            </div>
-            <form class="screen-form">
-                <input type="email" placeholder="Your Email">
-                <button type="submit">SUBSCRIBE</button>
-            </form>
-        </div>
-    </main>
-    <footer class="screen-footer">
-        <div class="footer-cover">
-            <div class="footer-container">
-                <div class="footer-title">
-                    <h3>Thank You!</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat vel cupiditate unde. Eligendi dolorum veritatis aperiam, quam, doloribus voluptates suscipit nemo ex consequatur ipsam, praesentium ratione dolorem expedita nisi autem!</p>
-                    <div class="footer-icons">
-                        <span><i class="fab fa-instagram"></i></span>
-                        <span><i class="fab fa-facebook-f"></i></span>
-                        <span><i class="fab fa-twitter"></i></span>
-                        <span><i class="fas fa-phone-alt"></i></span>
-                    </div>
-                </div>
-                <div class="footer-more">
-                    <div class="footer-rows">
-                        <h3>About</h3>
-                        <ul class="footer-list">
-                            <li>History</li>
-                            <li>Our Team</li>
-                            <li>Brand Guidelines</li>
-                            <li>Terms&Condition</li>
-                            <li>Privacy Policy</li>
-                        </ul>
-                    </div>
-                    <div class="footer-rows">
-                        <h3>Service</h3>
-                        <ul class="footer-list">
-                            <li>How to Order</li>
-                            <li>Our Product</li>
-                            <li>Order Status</li>
-                            <li>Promo</li>
-                            <li>Payment Method</li>
-                        </ul>
-                    </div>
-                    <div class="footer-rows">
-                        <h3>Other</h3>
-                        <ul class="footer-list">
-                            <li>Contact us</li>
-                            <li>Help</li>
-                            <li>Privacy</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"> </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <script src="js/index.js"></script>
+  </body>
 </html>
