feat: clone moonlight  website moving parallsx scrolling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>scrolling</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <section>
+      <h2 id="text">moon light</h2>
+      <img alt="별" src="img/stars.png" id="stars" />
+      <img alt="산앺" src="img/mountains_front.png" id="mountains_front" />
+      <img alt="산뒤" src="img/mountains_behind.png" id="mountains_behind" />
+      <img alt="달" src="img/moon.png" id="moon" />
+      <a href="#sec" id="btn">explore</a>
+    </section>
+    <div class="sec" id="sec">
+      <h2>parallax scrollling</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+        inventore! Enim nihil debitis possimus quas sed repellendus sapiente at
+        explicabo cupiditate tempora nemo numquam cumque laudantium nostrum
+        inventore, excepturi consectetur. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Aliquid, inventore! Enim nihil debitis possimus quas
+        sed repellendus sapiente at explicabo cupiditate tempora nemo numquam
+        cumque laudantium nostrum inventore, excepturi consectetur.
+        <br /><br />
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos unde at
+        asperiores consequuntur sit totam, sed neque odio praesentium labore.
+        Suscipit nemo sint libero, minima nobis quas assumenda modi nostrum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+        inventore! Enim nihil debitis possimus quas sed repellendus sapiente at
+        explicabo cupiditate tempora nemo numquam cumque laudantium nostrum
+        inventore, excepturi consectetur.
+        <br /><br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+        obcaecati dignissimos suscipit, impedit inventore, quidem dolorem, sed
+        vero iusto veritatis voluptate. Nobis deleniti exercitationem nemo
+        praesentium consequatur, est commodi dolore? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Aliquid, inventore! Enim nihil debitis
+        possimus quas sed repellendus sapiente at explicabo cupiditate tempora
+        nemo numquam cumque laudantium nostrum inventore, excepturi consectetur.
+        <br /><br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+        inventore! Enim nihil debitis possimus quas sed repellendus sapiente at
+        explicabo cupiditate tempora nemo numquam cumque laudantium nostrum
+        inventore, excepturi consectetur. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Aliquid, inventore! Enim nihil debitis possimus quas
+        sed repellendus sapiente at explicabo cupiditate tempora nemo numquam
+        cumque laudantium nostrum inventore, excepturi consectetur.
+        <br /><br />
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos unde at
+        asperiores consequuntur sit totam, sed neque odio praesentium labore.
+        Suscipit nemo sint libero, minima nobis quas assumenda modi nostrum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+        inventore! Enim nihil debitis possimus quas sed repellendus sapiente at
+        explicabo cupiditate tempora nemo numquam cumque laudantium nostrum
+        inventore, excepturi consectetur.
+        <br /><br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+        obcaecati dignissimos suscipit, impedit inventore, quidem dolorem, sed
+        vero iusto veritatis voluptate. Nobis deleniti exercitationem nemo
+        praesentium consequatur, est commodi dolore? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Aliquid, inventore! Enim nihil debitis
+        possimus quas sed repellendus sapiente at explicabo cupiditate tempora
+        nemo numquam cumque laudantium nostrum inventore, excepturi consectetur.
+      </p>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
